--- a/goblins/styles/goblin.css
+++ b/goblins/styles/goblin.css
@@ -12,7 +12,7 @@ html, body{
 
 html{
 background: #aaa; /* Old browsers */
-background:url('../images/bg-top.jpg');
+background:url('../images/background.png');
 background-size: 100% 100%;
 background-attachment: fixed;
 
@@ -27,7 +27,10 @@ h1, h2, h3{
 	margin-bottom:0;
 	margin-top:30px;
 }
-
+h2{
+	font-size: 12px;
+	border-bottom: 1px solid black;
+}
 p, li, td{
 	font-size:13px;
 	color:#263A3D;
@@ -54,14 +57,14 @@ ul, ol{
 #aedram-container {
 	float:left;
 	border: 1px solid #ccc;
-	padding: 20px 15px 30px 15px;
+	padding: 20px 15px 0px 15px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	background: #fff;
 	margin-bottom: 30px;
 }
 
 header h1{
-	background: url('../images/bg-top.jpg') bottom;
+	background: url('../images/background.png') bottom;
 	background-size: 100%;
     padding: 3px 15px;
     font-size:40px;
